--- a/index.css
+++ b/index.css
@@ -1,8 +1,37 @@
-.mh-50 {
+
+#pfp {
   max-height: 25rem;
 }
 #banner {
     background: #1992C2;
-    background: linear-gradient(135deg,rgba(42, 123, 155, 0.9) 0%, rgba(152, 251, 152, 0.667) 100%);
+    /*background: linear-gradient(135deg,rgba(42, 123, 155, 0.9) 0%, rgba(152, 251, 152, 0.667) 100%);*/
+    background: linear-gradient(135deg,rgba(25, 146, 194, 1) 0%, rgba(152, 251, 152, 1) 50%, rgba(251, 238, 152, 0.66) 100%);
     color: black;
 }
+
+.card {
+    text-align: left;
+    box-shadow:
+        0 2px 10px rgba(251, 238, 152, 1),
+        0 4px 10px rgba(152, 251, 152, 0.5),
+        0 8px 10px rgba(25, 146, 194, 0.6);
+    text-decoration: none;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: none;
+}
+
+.card h2 {
+    color: #1992C2;
+}
+
+.card:hover {
+    transform: translateY(-6px);
+    /*box-shadow: 0 10px 24px rgba(0, 0, 0, 0.15);*/
+
+    box-shadow:
+        0 5px 24px rgba(251, 238, 152, 1),
+        0 10px 24px rgba(152, 251, 152, 0.5),
+        0 20px 24px rgba(25, 146, 194, 0.8);
+
+}
+
